Assembler/tests/ok/precompiler/simple_precompiler.asm
#define _ANSWER 42

addi r9, r10, _ANSWER
