Assembler/tests/bad/precompiler/pound_define_must_come_before_usage.asm
addi r9, r10, _ANSWER

#define _ANSWER 42
